--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,26 +1,58 @@
+# version: "3"
+# services:
+#   pyhton_service:
+#     build:
+#       context: ./
+#       dockerfile: Dockerfile
+#     image: workshop1
+#     container_name: workshop_python_container
+#     stdin_open: true #  docker attach container_id
+#     tty: true
+#     ports:
+#      - "8000:8000"
+#     volumes:
+#      - .:/app
+#     depends_on:
+#      - postgres_service
+
+#   postgres_service:
+#     image: postgres
+#     container_name: workshop_postgres_container
+#     ports:
+#      - "5432:5432"
+#     environment:
+#      POSTGRES_PASSWORD: admin
+#     volumes:
+#      - .:/var/lib/postgres
+     
+
+
+     
+     
+#its for scraping 'https://blog.python.org/ ,this website.          
 version: "3"
 services:
-  pyhton_service:
-    build:
-      context: ./
-      dockerfile: Dockerfile
-    image: workshop1
-    container_name: workshop_python_container
-    stdin_open: true #  docker attach container_id
-    tty: true
-    ports:
-     - "8000:8000"
-    volumes:
-     - .:/app
-    depends_on:
-     - postgres_service
-
-  postgres_service:
-    image: postgres
-    container_name: workshop_postgres_container
-    ports:
-     - "5432:5432"
-    environment:
-     POSTGRES_PASSWORD: admin
-    volumes:
-     - .:/var/lib/postgres
+ python_service:
+   build:
+     context: ./
+     dockerfile: Dockerfile
+   image: nishanscraping
+   container_name: scrape_container
+   stdin_open: true 
+   tty: true
+   ports:
+    - "8000:8000"
+   volumes:
+    - .:/app
+ psql-db:
+  image: 'postgres:14'
+  container_name: psql-db
+  environment:
+    - PGPASSWORD=123456
+    - POSTGRES_USER=postgres
+    - POSTGRES_PASSWORD=123456
+    - POSTGRES_DB=default_database
+  ports:
+    - '5434:5432'
+    
+    
