--- a/homework/docker-compose.yml
+++ b/homework/docker-compose.yml
@@ -12,3 +12,13 @@ services:
     - "8000:8000"
    volumes:
     - .:/app
+    
+psql-db:
+  image: 'postgres:14'
+  container_name: psql-db
+  environment:
+    - PGPASSWORD=123456
+    - POSTGRES_USER=postgres
+    - POSTGRES_PASSWORD=123456
+  ports:
+    - '5434:5432'
